tests written, readme tweaked, openapi documentation written and finalised
